--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,20 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile(name: 'spotify-auth-1.0.0-beta12', ext: 'aar')
+    compile(name: 'spotify-player-1.0.0-beta12', ext: 'aar')
+    compile project(':volley')
+
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
